CPP/ifceditor_v1/ifceditor/ifcengine/include/ifcengine.h

typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiBoolean;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInstance;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiRep;
typedef	int_t			SdaiPrimitiveType;
typedef	int_t			SdaiIterator;
SdaiModel		DECL STDC	engiOpenModelByStream(
									SdaiRep					repository,
									const void				* callback,
									const char				* schemaName
								);
static	inline	SdaiModel	engiOpenModelByStream(
									SdaiRep					repository,
									const void				* callback,
									char					* schemaName
								)
{
	return	engiOpenModelByStream(
					repository,
					callback,
					(const char*) schemaName
				);
}
SdaiEntity		DECL STDC	engiGetEntityElement(
									SdaiModel				model,
									SdaiInteger				index
								);
SdaiInteger		DECL STDC	sdaiGetMemberCount(
									SdaiAggr				aggregate
								);
SdaiPrimitiveType	DECL STDC	engiGetAttrTypeBN(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	SdaiPrimitiveType	engiGetAttrTypeBN(
											SdaiEntity				entity,
											char					* attributeName
										)
{
	return	engiGetAttrTypeBN(
					entity,
					(const char*) attributeName
				);
}
int_t			DECL STDC	getInstanceDerivedBoundingBox(
									SdaiModel				model,
									SdaiInstance			instance,
									double					* Ox,
									double					* Oy,
									double					* Oz,
									double					* Vx,
									double					* Vy,
									double					* Vz
								);
int_t			DECL STDC	getInstanceTransformationMatrix(
									SdaiModel				model,
									SdaiInstance			instance,
									double					* _11,
									double					* _12,
									double					* _13,
									double					* _14,
									double					* _21,
									double					* _22,
									double					* _23,
									double					* _24,
									double					* _31,
									double					* _32,
									double					* _33,
									double					* _34,
									double					* _41,
									double					* _42,
									double					* _43,
									double					* _44
								);
int_t			DECL STDC	getInstanceDerivedTransformationMatrix(
									SdaiModel				model,
									SdaiInstance			instance,
									double					* _11,
									double					* _12,
									double					* _13,
									double					* _14,
									double					* _21,
									double					* _22,
									double					* _23,
									double					* _24,
									double					* _31,
									double					* _32,
									double					* _33,
									double					* _34,
									double					* _41,
									double					* _42,
									double					* _43,
									double					* _44
								);
void			DECL * STDC	internalGetBoundingBox(
									SdaiModel				model,
									SdaiInstance			instance
								);
void			DECL * STDC	internalGetCenter(
									SdaiModel				model,
									SdaiInstance			instance
								);
int_t			DECL STDC	engiAttrIsInverse(
									const SdaiAttr			attribute
								);
int_t			DECL STDC	xxxxOpenModelByStream(
									int_t					repository,
									const void				* callback,
									const char				* schemaName
								);
static	inline	int_t	xxxxOpenModelByStream(
								int_t					repository,
								const void				* callback,
								char					* schemaName
							)
{
	return	xxxxOpenModelByStream(
					repository,
					callback,
					(const char*) schemaName
				);
}
SdaiIterator	DECL STDC	sdaiCreateIterator(
									const SdaiAggr			aggregate
								);
void			DECL STDC	sdaiDeleteIterator(
									SdaiIterator			iterator
								);
void			DECL STDC	sdaiBeginning(
									SdaiIterator			iterator
								);
SdaiBoolean		DECL STDC	sdaiNext(
									SdaiIterator			iterator
								);
int_t			DECL STDC	sdaiPrevious(
									SdaiIterator			iterator
								);
void			DECL STDC	sdaiEnd(
									SdaiIterator			iterator
								);
int_t			DECL STDC	sdaiplusGetAggregationType(
									SdaiInstance			instance,
									const SdaiAggr			aggregate
								);
int_t			DECL STDC	xxxxGetAttrTypeBN(
									SdaiInstance			instance,
									const char				* attributeName,
									const char				** attributeType
								);
static	inline	int_t	xxxxGetAttrTypeBN(
								SdaiInstance			instance,
								char					* attributeName,
								char					** attributeType
							)
{
	return	xxxxGetAttrTypeBN(
					instance,
					(const char*) attributeName,
					(const char**) attributeType
				);
}
int_t			DECL STDC	initializeModellingInstance(
									SdaiModel				model,
									int_t					* noVertices,
									int_t					* noIndices,
									double					scale,
									SdaiInstance			instance
								);
int_t			DECL STDC	finalizeModelling(
									SdaiModel				model,
									float					* vertices,
									int_t					* indices,
									int_t					FVF
								);
int_t			DECL STDC	getInstanceInModelling(
									SdaiModel				model,
									SdaiInstance			instance,
									int_t					mode,
									int_t					* startVertex,
									int_t					* startIndex,
									int_t					* primitiveCount
								);
void			DECL STDC	setVertexOffset(
									SdaiModel				model,
									double					x,
									double					y,
									double					z
								);
void			DECL STDC	setFormat(
									SdaiModel				model,
									int_t					setting,
									int_t					mask
								);
int_t			DECL STDC	getConceptualFaceCnt(
									SdaiInstance			instance
								);
int_t			DECL STDC	getConceptualFaceEx(
									SdaiInstance			instance,
									int_t					index,
									int_t					* startIndexTriangles,
									int_t					* noIndicesTriangles,
									int_t					* startIndexLines,
									int_t					* noIndicesLines,
									int_t					* startIndexPoints,
									int_t					* noIndicesPoints,
									int_t					* startIndexFacePolygons,
									int_t					* noIndicesFacePolygons,
									int_t					* startIndexConceptualFacePolygons,
									int_t					* noIndicesConceptualFacePolygons
								);
void			DECL STDC	createGeometryConversion(
									SdaiInstance			instance,
									int64_t					* owlInstance
								);
void			DECL STDC	convertInstance(
									SdaiInstance			instance
								);
int_t			DECL STDC	initializeModellingInstanceEx(
									SdaiModel				model,
									int_t					* noVertices,
									int_t					* noIndices,
									double					scale,
									SdaiInstance			instance,
									int_t					instanceList
								);
void			DECL STDC	exportModellingAsOWL(
									SdaiModel				model,
									const char				* fileName
								);
static	inline	void	exportModellingAsOWL(
								SdaiModel				model,
								char					* fileName
							)
{
	return	exportModellingAsOWL(
					model,
					(const char*) fileName
				);
}