Android/IFCViewerAndroid/distribution/ifcengine/include/engine.h


int64_t		DECL STDC	GetRevision(
									char			** timeStamp
								);
int64_t		DECL STDC	SetFormat(
									int64_t			model,
									int64_t			setting,
									int64_t			mask
								);
void		DECL STDC	SetVertexBufferOffset(
									int64_t			model,
									double			x,
									double			y,
									double			z
								);
int64_t		DECL STDC	CalculateInstance(
									int64_t			owlInstance,
									int64_t			* vertexBufferSize,
									int64_t			* indexBufferSize,
									int64_t			* transformationBufferSize
								);
int64_t		DECL STDC	UpdateInstanceVertexBuffer(
									int64_t			owlInstance,
									void			* vertexBuffer
								);
int64_t		DECL STDC	UpdateInstanceIndexBuffer(
									int64_t			owlInstance,
									void			* indexBuffer
								);
int64_t		DECL STDC	GetConceptualFaceCnt(
									int64_t			owlInstance
								);
int64_t		DECL STDC	GetConceptualFaceEx(
									int64_t			owlInstance,
									int64_t			index,
									int64_t			* startIndexTriangles,
									int64_t			* noIndicesTriangles,
									int64_t			* startIndexLines,
									int64_t			* noIndicesLines,
									int64_t			* startIndexPoints,
									int64_t			* noIndicesPoints,
									int64_t			* startIndexFacesPolygons,
									int64_t			* noIndicesFacesPolygons,
									int64_t			* startIndexConceptualFacePolygons,
									int64_t			* noIndicesConceptualFacePolygons
								);