C#/StreamingSTPInOut-CS/StreamingIFCInOut-CS/STEPEngine.cs


		//
		//		getInstanceDerivedBoundingBox               (http://rdf.bg/ifcdoc/CS64/getInstanceDerivedBoundingBox.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "getInstanceDerivedBoundingBox")]
        public static extern Int64 getInstanceDerivedBoundingBox(Int64 model, Int64 instance, out double Ox, out double Oy, out double Oz, out double Vx, out double Vy, out double Vz);

		//
		//		getInstanceTransformationMatrix             (http://rdf.bg/ifcdoc/CS64/getInstanceTransformationMatrix.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "getInstanceTransformationMatrix")]
        public static extern Int64 getInstanceTransformationMatrix(Int64 model, Int64 instance, out double _11, out double _12, out double _13, out double _14, out double _21, out double _22, out double _23, out double _24, out double _31, out double _32, out double _33, out double _34, out double _41, out double _42, out double _43, out double _44);

		//
		//		getInstanceDerivedTransformationMatrix      (http://rdf.bg/ifcdoc/CS64/getInstanceDerivedTransformationMatrix.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "getInstanceDerivedTransformationMatrix")]
        public static extern Int64 getInstanceDerivedTransformationMatrix(Int64 model, Int64 instance, out double _11, out double _12, out double _13, out double _14, out double _21, out double _22, out double _23, out double _24, out double _31, out double _32, out double _33, out double _34, out double _41, out double _42, out double _43, out double _44);

		//
		//		internalGetBoundingBox                      (http://rdf.bg/ifcdoc/CS64/internalGetBoundingBox.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "internalGetBoundingBox")]
        public static extern Int64 internalGetBoundingBox(Int64 model, Int64 instance);

		//
		//		internalGetCenter                           (http://rdf.bg/ifcdoc/CS64/internalGetCenter.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "internalGetCenter")]
        public static extern Int64 internalGetCenter(Int64 model, Int64 instance);

        //
        //  Deprecated API Calls (GENERIC)
        //

		//
		//		engiAttrIsInverse                           (http://rdf.bg/ifcdoc/CS64/engiAttrIsInverse.html)
		//
		//	This call is deprecated, please use call engiAttrIsInverse.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiAttrIsInverse")]
        public static extern Int64 engiAttrIsInverse(ref int_t attribute);

		//
		//		xxxxOpenModelByStream                       (http://rdf.bg/ifcdoc/CS64/xxxxOpenModelByStream.html)
		//
		//	This call is deprecated, please use call engiOpenModelByStream.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "xxxxOpenModelByStream")]
        public static extern Int64 xxxxOpenModelByStream(Int64 repository, [MarshalAs(UnmanagedType.FunctionPtr)] WriteCallBackFunction callback, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "xxxxOpenModelByStream")]
        public static extern Int64 xxxxOpenModelByStream(Int64 repository, [MarshalAs(UnmanagedType.FunctionPtr)] WriteCallBackFunction callback, byte[] schemaName);

		//
		//		sdaiCreateIterator                          (http://rdf.bg/ifcdoc/CS64/sdaiCreateIterator.html)
		//
		//	This call is deprecated, please use calls sdaiGetMemberCount(..) and engiGetEntityElement(..).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateIterator")]
        public static extern Int64 sdaiCreateIterator(ref int_t aggregate);

		//
		//		sdaiDeleteIterator                          (http://rdf.bg/ifcdoc/CS64/sdaiDeleteIterator.html)
		//
		//	This call is deprecated, please use calls sdaiGetMemberCount(..) and engiGetEntityElement(..).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiDeleteIterator")]
        public static extern void sdaiDeleteIterator(Int64 iterator);

		//
		//		sdaiBeginning                               (http://rdf.bg/ifcdoc/CS64/sdaiBeginning.html)
		//
		//	This call is deprecated, please use calls sdaiGetMemberCount(..) and engiGetEntityElement(..).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiBeginning")]
        public static extern void sdaiBeginning(Int64 iterator);

		//
		//		sdaiNext                                    (http://rdf.bg/ifcdoc/CS64/sdaiNext.html)
		//
		//	This call is deprecated, please use calls sdaiGetMemberCount(..) and engiGetEntityElement(..).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiNext")]
        public static extern Int64 sdaiNext(Int64 iterator);

		//
		//		sdaiPrevious                                (http://rdf.bg/ifcdoc/CS64/sdaiPrevious.html)
		//
		//	This call is deprecated, please use calls sdaiGetMemberCount(..) and engiGetEntityElement(..).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPrevious")]
        public static extern Int64 sdaiPrevious(Int64 iterator);

		//
		//		sdaiEnd                                     (http://rdf.bg/ifcdoc/CS64/sdaiEnd.html)
		//
		//	This call is deprecated, please use calls sdaiGetMemberCount(..) and engiGetEntityElement(..).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiEnd")]
        public static extern void sdaiEnd(Int64 iterator);

		//
		//		sdaiplusGetAggregationType                  (http://rdf.bg/ifcdoc/CS64/sdaiplusGetAggregationType.html)
		//
		//	This call is deprecated, please use call ....
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiplusGetAggregationType")]
        public static extern Int64 sdaiplusGetAggregationType(Int64 instance, out int_t aggregation);

		//
		//		xxxxGetAttrTypeBN                           (http://rdf.bg/ifcdoc/CS64/xxxxGetAttrTypeBN.html)
		//
		//	This call is deprecated, please use calls engiGetAttrTypeBN(..).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetAttrTypeBN")]
        public static extern Int64 xxxxGetAttrTypeBN(Int64 instance, string attributeName, out IntPtr attributeType);

        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetAttrTypeBN")]
        public static extern Int64 xxxxGetAttrTypeBN(Int64 instance, byte[] attributeName, out IntPtr attributeType);

        //
        //  Deprecated API Calls (GEOMETRY)
        //

		//
		//		initializeModellingInstance                 (http://rdf.bg/ifcdoc/CS64/initializeModellingInstance.html)
		//
		//	This call is deprecated, please use call CalculateInstance().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "initializeModellingInstance")]
        public static extern Int64 initializeModellingInstance(Int64 model, out int_t noVertices, out int_t noIndices, double scale, Int64 instance);

		//
		//		finalizeModelling                           (http://rdf.bg/ifcdoc/CS64/finalizeModelling.html)
		//
		//	This call is deprecated, please use call UpdateInstanceVertexBuffer() and UpdateInstanceIndexBuffer().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "finalizeModelling")]
        public static extern Int64 finalizeModelling(Int64 model, float[] vertices, out int_t indices, Int64 FVF);

		//
		//		getInstanceInModelling                      (http://rdf.bg/ifcdoc/CS64/getInstanceInModelling.html)
		//
		//	This call is deprecated, there is no direct / easy replacement although the functionality is present. If you still use this call please contact RDF to find a solution together.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "getInstanceInModelling")]
        public static extern Int64 getInstanceInModelling(Int64 model, Int64 instance, Int64 mode, out int_t startVertex, out int_t startIndex, out int_t primitiveCount);

		//
		//		setVertexOffset                             (http://rdf.bg/ifcdoc/CS64/setVertexOffset.html)
		//
		//	This call is deprecated, please use call SetVertexBufferOffset().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "setVertexOffset")]
        public static extern void setVertexOffset(Int64 model, double x, double y, double z);

		//
		//		setFormat                                   (http://rdf.bg/ifcdoc/CS64/setFormat.html)
		//
		//	This call is deprecated, please use call SetFormat().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "setFormat")]
        public static extern void setFormat(Int64 model, Int64 setting, Int64 mask);

		//
		//		getConceptualFaceCnt                        (http://rdf.bg/ifcdoc/CS64/getConceptualFaceCnt.html)
		//
		//	This call is deprecated, please use call GetConceptualFaceCnt().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "getConceptualFaceCnt")]
        public static extern Int64 getConceptualFaceCnt(Int64 instance);

		//
		//		getConceptualFaceEx                         (http://rdf.bg/ifcdoc/CS64/getConceptualFaceEx.html)
		//
		//	This call is deprecated, please use call GetConceptualFaceEx().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "getConceptualFaceEx")]
        public static extern Int64 getConceptualFaceEx(Int64 instance, Int64 index, out int_t startIndexTriangles, out int_t noIndicesTriangles, out int_t startIndexLines, out int_t noIndicesLines, out int_t startIndexPoints, out int_t noIndicesPoints, out int_t startIndexFacesPolygons, out int_t noIndicesFacesPolygons, out int_t startIndexConceptualFacePolygons, out int_t noIndicesConceptualFacePolygons);

		//
		//		createGeometryConversion                    (http://rdf.bg/ifcdoc/CS64/createGeometryConversion.html)
		//
		//	This call is deprecated, please use call ... .
		//
        [DllImport(STEPEngineDLL, EntryPoint = "createGeometryConversion")]
        public static extern void createGeometryConversion(Int64 instance, out Int64 owlInstance);

		//
		//		convertInstance                             (http://rdf.bg/ifcdoc/CS64/convertInstance.html)
		//
		//	This call is deprecated, please use call ... .
		//
        [DllImport(STEPEngineDLL, EntryPoint = "convertInstance")]
        public static extern void convertInstance(Int64 instance);

		//
		//		initializeModellingInstanceEx               (http://rdf.bg/ifcdoc/CS64/initializeModellingInstanceEx.html)
		//
		//	This call is deprecated, please use call CalculateInstance().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "initializeModellingInstanceEx")]
        public static extern Int64 initializeModellingInstanceEx(Int64 model, out int_t noVertices, out int_t noIndices, double scale, Int64 instance, Int64 instanceList);

		//
		//		exportModellingAsOWL                        (http://rdf.bg/ifcdoc/CS64/exportModellingAsOWL.html)
		//
		//	This call is deprecated, please contact us if you use this call.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "exportModellingAsOWL")]
        public static extern void exportModellingAsOWL(Int64 model, string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "exportModellingAsOWL")]
        public static extern void exportModellingAsOWL(Int64 model, byte[] fileName);


        //
        //  Meta information API Calls
        //

		//
		//		GetRevision                                 (http://rdf.bg/gkdoc/CS64/GetRevision.html)
		//
		//	Returns the revision number.
		//	The timeStamp is generated by the SVN system used during development.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "GetRevision")]
        public static extern Int64 GetRevision(out IntPtr timeStamp);

		//
		//		GetRevisionW                                (http://rdf.bg/gkdoc/CS64/GetRevisionW.html)
		//
		//	Returns the revision number.
		//	The timeStamp is generated by the SVN system used during development.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "GetRevisionW")]
        public static extern Int64 GetRevisionW(out IntPtr timeStamp);
